--- a/AutoBoss/AutoBoss/AutoBoss+.csproj
+++ b/AutoBoss/AutoBoss/AutoBoss+.csproj
@@ -44,11 +44,11 @@
     <Reference Include="System.Xml" />
     <Reference Include="TerrariaServer, Version=1.14.0.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\TShock4.2.x\TerrariaServer.exe</HintPath>
+      <HintPath>..\..\..\TShock\TShockAPI\bin\Release\TerrariaServer.exe</HintPath>
     </Reference>
-    <Reference Include="TShockAPI, Version=4.2.0.1019, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="TShockAPI, Version=4.2.2.1228, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\TShock4.2.x\ServerPlugins\TShockAPI.dll</HintPath>
+      <HintPath>..\..\..\TShock\TShockAPI\bin\Release\TShockAPI.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
