--- a/AutoBoss/AutoBoss/AutoBoss+.csproj
+++ b/AutoBoss/AutoBoss/AutoBoss+.csproj
@@ -33,7 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
-      <HintPath>..\..\..\..\..\Desktop\Transfer2\Ryst\serverplugins\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\..\TShock 1.2.4.1\ServerPlugins\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -44,11 +44,11 @@
     <Reference Include="System.Xml" />
     <Reference Include="TerrariaServer, Version=1.14.0.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\TShock\TShockAPI\bin\Release\TerrariaServer.exe</HintPath>
+      <HintPath>..\..\..\TShock 1.2.4.1\TerrariaServer.exe</HintPath>
     </Reference>
     <Reference Include="TShockAPI, Version=4.2.2.1228, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\TShock\TShockAPI\bin\Release\TShockAPI.dll</HintPath>
+      <HintPath>..\..\..\TShock 1.2.4.1\ServerPlugins\TShockAPI.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
